fdo#52399: Do not needlessly set DefaultContext of global ServiceManager

...the new cppuhelper/source/defaultbootstrap.cxx now forbids this nonsense with
a PropertyVetoException.  It looks like the code in propbrw.cxx had always been
confused about what to do exactly (using xOwnContext as delegate in the call to
createComponentContext should just be enough) and the useless re-setting of the
global ServiceManager's DefaultContext happened to work by accident.

Change-Id: I80a87fe9b0948d9aa6dc9e2e63497097044a4959
Signed-off-by: Michael Stahl <mstahl@redhat.com>
Signed-off-by: Lionel Elie Mamane <lionel@mamane.lu>
Signed-off-by: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>